openshell/namespaces/tiger-team/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tiger-team
  annotations:
    openshift.io/display-name: "OpenShell - Tiger Team"
  labels:
    openshift.io/cluster-monitoring: "true"
    argocd.argoproj.io/managed-by: openshift-gitops
